--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "http": "0.0.0",
+    "jquery": "^3.3.1",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
