--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.16.2",
     "http": "0.0.0",
     "jquery": "^3.3.1",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "wunderlist": "^0.1.3"
   },
   "devDependencies": {
     "concurrently": "^3.6.1"
