--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.16.2",
     "http": "0.0.0",
     "jquery": "^3.3.1",
+    "kelvin-to-celsius": "^1.1.0",
     "socket.io": "^2.1.1",
     "wunderlist": "^0.1.3"
   },
