--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http": "0.0.0",
     "jquery": "^3.3.1",
     "kelvin-to-celsius": "^1.1.0",
+    "shelljs": "^0.8.2",
     "socket.io": "^2.1.1",
     "wunderlist": "^0.1.3"
   },
