--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "crypto-js": "^3.1.9-1",
+    "dotenv": "^6.1.0",
     "express": "^4.16.2",
     "http": "0.0.0",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.4.0",
     "kelvin-to-celsius": "^1.1.0",
+    "mongodb": "^3.1.10",
     "shelljs": "^0.8.2",
     "socket.io": "^2.1.1",
+    "uuid": "^3.3.2",
     "wunderlist": "^0.1.3"
   },
   "devDependencies": {
