--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.4.0",
     "kelvin-to-celsius": "^1.1.0",
     "mongodb": "^3.1.10",
+    "multer": "^1.4.1",
     "shelljs": "^0.8.2",
     "socket.io": "^2.1.1",
     "uuid": "^3.3.2",
