--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "crypto-js": "^3.1.9-1",
     "dotenv": "^6.1.0",
     "express": "^4.16.2",
+    "fs": "0.0.1-security",
+    "googleapis": "^27.0.0",
     "http": "0.0.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.4.0",
     "kelvin-to-celsius": "^1.1.0",
     "mongodb": "^3.1.10",
     "multer": "^1.4.1",
+    "readline": "^1.3.0",
     "shelljs": "^0.8.2",
     "socket.io": "^2.1.1",
     "uuid": "^3.3.2",
