--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.2.0",
+    "@material-ui/core": "^3.9.1",
     "clock-react": "^1.1.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4",
-    "rss-feed-emitter": "^2.0.0",
-    "rss-parser": "^3.5.2",
-    "semantic-ui-css": "^2.4.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-scripts": "^2.1.3",
+    "rss-feed-emitter": "^2.0.1",
+    "rss-parser": "^3.6.2",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.82.5",
-    "socket.io-client": "^2.1.1",
+    "socket.io-client": "^2.2.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
