--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.4.0",
     "kelvin-to-celsius": "^1.1.0",
     "mongodb": "^3.1.13",
+    "mosca": "^2.8.3",
     "multer": "^1.4.1",
     "readline": "^1.3.0",
     "shelljs": "^0.8.3",
