Show weather forecast on web ui

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 secretkey=alsjkdmoisdjnaüopsdihasdfmhasodjksclwerlyclaksqiwruutidmnvmldlsajqödifbfjvpdkhiemdbcnxnjiusdgkh
+weatherkey=ba26397fa9d26d3655feda1b51d4b79d
