--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^3.1.13",
     "mosca": "^2.8.3",
     "multer": "^1.4.1",
+    "node-fetch": "^2.3.0",
     "readline": "^1.3.0",
     "shelljs": "^0.8.3",
     "socket.io": "^2.2.0",
