--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "rss-parser": "^3.6.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.82.5",
+    "sfcookies": "^1.0.2",
     "socket.io-client": "^2.2.0",
     "typeface-roboto": "0.0.54"
   },
