--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^3.1.13",
     "mosca": "^2.8.3",
     "multer": "^1.4.1",
+    "node-fetch": "^2.3.0",
     "node-webcam": "^0.4.6",
     "raspicam": "^0.2.14",
     "readline": "^1.3.0",
