--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "async": "^2.6.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
