--- a/jsonModels/config.json
+++ b/jsonModels/config.json
@@ -1,3 +1,7 @@
+/*
+Example config document
+The config file in the backend looks like this
+*/
 {
   "ip_host": "127.0.0.1:5000",
   "ip_django": "127.0.0.1",
