--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "^2.1.3",
+    "react-scroll": "^1.7.11",
     "rss-feed-emitter": "^2.0.1",
     "rss-parser": "^3.6.2",
     "semantic-ui-css": "^2.4.1",
