--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "multer": "^1.4.1",
     "node-fetch": "^2.3.0",
     "node-webcam": "^0.4.6",
+    "prop-types": "^15.7.2",
     "qr-image": "^3.2.0",
     "raspicam": "^0.2.14",
     "readline": "^1.3.0",
     "request": "^2.88.0",
+    "rss-feed-emitter": "^2.0.1",
+    "scroll-into-view": "^1.9.5",
     "shelljs": "^0.8.3",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2",
