--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
+    "date-format": "^2.0.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
@@ -25,6 +26,7 @@
     "mosca": "^2.8.3",
     "multer": "^1.4.1",
     "node-fetch": "^2.3.0",
+    "node-ical": "^0.9.2",
     "node-webcam": "^0.4.6",
     "prop-types": "^15.7.2",
     "qr-image": "^3.2.0",
