--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{}
+{"ip_host":"192.168.178.20","django_address":"http://localhost:8000","host_address":"http://192.168.178.20:5000","uuid":"a3163810-56c1-11e9-a32a-652d32163870"}
